--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Calibri;
+    font-family: heebo;
 }
+
 
 body {
     animation: fadeIn 1.5s;
