--- a/style.css
+++ b/style.css
@@ -8,8 +8,12 @@
     margin: 0;
     padding: 0;
     font-family: Calibri;
+    cursor: url("cursor.png"), auto;
 }
 
+html {
+    cursor: url("cursor.png"), auto;
+}
 
 body {
     animation: fadeIn 1.5s;
